	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.6-trunk

# (r1615)
 * Default "_pushdir_re" variable matches now .webp filename extension when loading a directory.
# (r1613)
 * fix: fim -c '/<pattern>' was broken.
# (r1605)
 * added " INTEGER , INTEGER IDENTIFIER arguments" syntax to repeat a command 
   on each file in the interval and substitute its name to '{}' in the arguments
   to an iterated command IDENTIFIER.
   (FIXME: undocumented)
# (r1599--r1602)
 * keeping a key pressed accelerate goto (experimental).
# (r1594)
 * internal: fix: piping from external commands was using 0 instead of 'WNOHANG', leading to hanging.
# (r1585)
 * internal: fix: error handling was missing.
# (r1584)
 * fimgs: handling tar.xz archives.
# (r1583)
 * Reload automatically on file change.
# (r1571)
 * Command 'list' 'sort_var' 'var' to sort file list according to values of 'i:var'.
# (r1570)
 * Command 'list' 'sort_comment' to sort file list according to 'i:_comment' value.
# (r1564)
 * Added an --verbose-font-load switch to set _fbfont_verbosity=1.
# (r1563)
 * Variable '_fbfont_verbosity' sets verbose font loading.
# (r1561)
 * fix: short options -b, -h, -R were not getting optional argument (e.g. -b1).
# (r1559)
 * key combination C-r now assigned to "reload ''".
# (r1555)
 * fix: symbol from fbi sources clashed with gcc-6 onwards, breaking compilation.
# (r1544)
 * key combination C-w assigned to setting auto-scaling to width.
# (r1543)
 * smoother scroll of large images.
# (r1540,r1541)
 * if SSH_TTY set and no output device specified, will give precedence to aalib.
# (r1539)
 * bugfix: in --as-text will avoid repeated reload of file.
# (r1526)
 * Hardcoded font (if configured in) will serve as fallback font.
# (r1523)
 * Added an --no-pipe-load / -X switch to _no_external_loader_programs=1;
# (r1503)
 * description variables beginning with '_' will not go into i: .
# (r1502,r1504,r1580)