@@ -1,7 +1,7 @@
 .\"
 .\" $Id$
 .\"
-.TH fimrc 5 "(c) 2011-2018 Michele Martone"
+.TH fimrc 5 "(c) 2011-2022 Michele Martone"
 .SH NAME
 fimrc - \fB fim \fP configuration file and language reference
 
@@ -502,7 +502,7 @@ list 'markall': mark all the current list files.
 .fi
 list 'unmarkall': unmark all the marked files.
 .fi
-list 'pushdir' {dirname}: will push all the files in {dirname}, when matching the regular expression in variable _pushdir_re or, if empty, from constant regular expression '\.JPG$\:|\.PNG$\:|\.GIF$\:|\.BMP$\:|\.TIFF$\:|\.TIF$\:|\.JPEG$\:|\.JFIF$\:|\.PPM$\:|\.PGM$\:|\.PBM$\:|\.PCX$\:'.
+list 'pushdir' {dirname}: will push all the files in {dirname}, when matching the regular expression in variable _pushdir_re or, if empty, from constant regular expression '\.JPG$\:|\.PNG$\:|\.GIF$\:|\.BMP$\:|\.TIFF$\:|\.TIF$\:|\.JPEG$\:|\.JFIF$\:|\.PPM$\:|\.PGM$\:|\.PBM$\:|\.PCX|\.WEBP$\:'.
 .fi
 list 'pushdirr' {dirname}: like pushdir, but will also push encountered directory entries recursively.
 .fi
@@ -1683,6 +1683,7 @@ bind "^" "0;";
 bind "$" "$;";
 #bind "Backspace" "prev"; # console code for C-h and Backspace is the same :-)
 bind "'" "goto _lastfileindex"; 
+bind '"' "scale 'shadow';i:fresh=1;redisplay;"; 
 bind '(' "goto '^p'";
 bind ')' "goto '$p'";
 _display_status=1; # lower status line
