@@ -1,9 +1,9 @@
-_console_buffer_total:139264
-_console_buffer_free:129877
-_console_buffer_use:0
-_console_buffer_total:139264
-_console_buffer_free:129847
+_console_buffer_total:147456
+_console_buffer_free:137982
 _console_buffer_use:0
 _console_buffer_total:147456
-_console_buffer_free:138009
+_console_buffer_free:137952
+_console_buffer_use:0
+_console_buffer_total:147456
+_console_buffer_free:137922
 _console_buffer_use:0
